@@ -144,6 +144,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M3</version>
                 <configuration>
+                    <argLine>${argLine} -Djdk.attach.allowAttachSelf</argLine>
                     <suiteXmlFiles>
                         <suiteXmlFile>testng-devkit.xml</suiteXmlFile>
                     </suiteXmlFiles>
